media/css/firefox/home/master.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';
$brand-theme: 'firefox';

@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/components/logos/wordmark';
@import '../../../protocol/css/components/logos/wordmark-product-firefox';
@import '../../../protocol/css/components/logos/wordmark-product-monitor';
@import '../../../protocol/css/components/logos/wordmark-product-vpn';
@import '../../../protocol/css/components/logos/wordmark-product-pocket';
@import '../../../protocol/css/components/zap';
@import '../../../protocol/css/components/split';
@import '../../protocol/components/custom-menu-list';
@import '../sticky-promo';


// conditional content
.js-fx-only {
    display: none;

    .is-firefox & {
        display: block;
    }
}

#menu-browsers {
    .ios & .menu-desktop,
    .ios & .menu-android,
    .android & .menu-desktop,
    .android & .menu-ios {
        a {
            pointer-events: none;
            color: $color-marketing-gray-50;
        }
    }
}

// ------------------------------------------------------------------------------
// component over rides (content menu list, feature card)

.firefox-home {

    // content
    .mzp-l-content {
        max-width: $content-xl;
        padding-bottom: $layout-md;
        padding-top: $layout-md;
    }

    // menu list
    .mzp-c-menu-list {
        margin-bottom: $spacing-lg;
    }

    // splits
    .mzp-c-split {
        .mzp-c-split-container {
            padding-bottom: $layout-lg;
            padding-top: $layout-lg;
        }

        .mzp-c-wordmark {
            margin-bottom: $spacing-lg;
        }

        h4 {
            @include text-title-sm;
            margin-bottom: $layout-sm;
        }
    }

    @media #{$mq-md} {
        // content
        .mzp-l-content {
            padding-top: $layout-lg;
            padding-bottom: $layout-lg;
        }
    }
}

// ------------------------------------------------------------------------------
// Lead text and image

.c-lead {
    .mzp-l-content {
        max-width: $content-max;
    }
}

.c-lead-title {
    @include font-size(40px);
    margin-bottom: 0;
    text-align: center;
}

@media #{$mq-md} {
    .c-lead {
        @include bidi (((background-position, center left 50vw, center right 50vw),));
        background-image: url('/media/img/firefox/home/master/hero.jpg');
        background-size: auto 300px;
        background-repeat: no-repeat;
    }

    .c-lead-title {
        @include bidi (((text-align, left, right),));
        @include flexbox;
        @include align-items(center);
        @include font-size(48px);
        max-width: calc(50% - #{$layout-sm});
        min-height: 300px - $layout-xl;
    }
}

@media #{$mq-lg} {
    .c-lead {
        @include at2x('/media/img/firefox/home/master/hero.jpg', contain);
        margin-top: $spacing-lg;
        margin-bottom: $layout-md;
    }

    .c-lead-title {
        @include font-size(64px);
        margin-top: $spacing-lg;
        max-width: calc(50% - #{$layout-md});
    }
}


// ------------------------------------------------------------------------------
// showcase

.c-showcase {
    text-align: center;
}

.c-showcase-title {
    @include text-title-sm;
    margin-bottom: $spacing-lg;
}

.c-showcase-list {
    @include flexbox;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto ($layout-md * -1) auto; // offset the bottom magin on the individual icons
    max-width: $content-md;

    .t-small & {
        max-width: $content-sm;
    }

    li {
        flex-grow: 1;
        flex-basis: 0;
        margin: 0 $layout-sm $layout-sm;

        .t-small & {
            display: inline-block;
            flex-basis: auto;
            height: 40px;
            width: 40px;
            overflow: hidden;
        }
    }
}

@media #{$mq-md} {
    .c-showcase-list {
        margin-bottom: ($layout-lg * -1); // offset the magin on the individual icons

        li {
            margin: 0 $layout-sm $layout-lg;

            .t-small & {
                margin: 0 $spacing-md $layout-lg;
            }
        }
    }
}


// ------------------------------------------------------------------------------
// promise background colour and image

.t-promise {
    padding: 0 $layout-sm;

    .mzp-c-split-container {
        @include light-links;
        background-image: linear-gradient(90deg,  $color-violet-80, $color-violet-90);
        border-radius: $border-radius-md;
        box-shadow: $box-shadow-md;
        margin: $layout-md auto;

        h3,
        p {
            color: $color-white;
        }

        h3 {
            @include text-title-md;
        }
    }

    @media #{$mq-md} {
        margin: $layout-lg 0;
        padding: 0 $layout-md;

        .mzp-c-split-container {
            background-image: url('/media/img/firefox/home/master/respect.jpg'), linear-gradient(90deg, #5731AB 50%, $color-violet-90);
            background-position: left -30px center, top left;
            background-repeat: no-repeat;
            background-size: 50%, auto;

            @media #{$mq-high-res} {
                background-image: url('/media/img/firefox/home/master/respect-high-res.jpg'), linear-gradient(90deg, #5731AB 50%, $color-violet-90);
            }

            [dir="rtl"] & {
                background-image: url('/media/img/firefox/home/master/respect-rtl.jpg'), linear-gradient(-90deg, #5731AB 50%, $color-violet-90);
                background-position: right -30px center, top right;

                @media #{$mq-high-res} {
                    background-image: url('/media/img/firefox/home/master/respect-rtl-high-res.jpg'), linear-gradient(-90deg, #5731AB 50%, $color-violet-90);
                }
            }
        }

        .mzp-c-split-body {
            @include flexbox;
            align-items: center;
            min-height: 280px;
        }
    }

    @media #{$mq-xl} {
        padding: 0 $layout-lg;

        .mzp-c-split-container {
            background-position: left center, top left;
            background-size: 547px auto, auto;
        }
    }
}

// ------------------------------------------------------------------------------
// bottom of the page cta

.c-end {
    background: linear-gradient(90deg, $color-violet-90, $color-ink-80);
    color: #fff;
    text-align: center;

    .mzp-l-content {
        max-width: $content-lg;
        padding-bottom: $layout-xl;
        padding-top: $layout-xl;
    }
}

.c-end-title {
    @include text-title-md;
    color: #fff;
    margin-bottom: $spacing-2xl;
    margin-top: $layout-md;

    // https://github.com/mozilla/protocol/issues/511
    strong {
        @include zap('/media/protocol/img/zaps/zap-08.svg');
    }
}

@media #{$mq-md} {
    .c-end {
        margin-top: $layout-lg;
    }
}

